syntax = "proto3";
package chainlink.v1beta;

import "gogoproto/gogo.proto";

option go_package = "github.com/ChainSafe/chainlink-cosmos/x/chainlink/types";

message GenesisState {
  // moduleOwners is an array containing the chainlink init module owner accounts.
  repeated MsgModuleOwner moduleOwners = 1;
}

// MsgModuleOwner is type defined for init/add new module owner
message MsgModuleOwner {
  // address defines the address of the module owner
  bytes address = 1 [
    (gogoproto.moretags) = "yaml:\"address\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"
  ];
  // pubKey defined the public key of the module owner
  bytes pubKey = 2 [
    (gogoproto.moretags) = "yaml:\"pub_key\""
  ];
  // the module owner who assigned this new module owner
  bytes assignerAddress = 3 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress",
    (gogoproto.nullable) = true
  ];
}
